2006-10-03 Carlos Nieves Onega <cnieves@iespana.es>

	* lib/system-gschemrc.in, src/g_register.c: 
	Changed the name of the new scheme function which adds a component
	at a given location to add-component-at-xy. The former name
	was already used.

2006-09-30 Carlos Nieves Onega <cnieves@iespana.es>

	* lib/system-gschemrc.in: Changed the definition of the default
	titleblock. Users can now easily override the default setting.

	* src/x_event.c, src/x_window.c, include/prototype.h:
	Fix for bug #1527465. Do a zoom extents for all pages when the
	main window is maximized.

	* src/x_image.c: Added the border in the gdk-pixbuf's image output.
	Fix bug #1565433.
	
2006-09-30 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/g_hook.c: Added code to g_add_component so that the 
	component is added to the object list properly.

	* src/g_hook.c: Commented out o_redraw_single call to minimize
	flickering.  At some point a g_redraw_all should be added for
	those users who want to use g_component_add from a script.

	* i_callbacks.c: Removed unnecessary redraw and scrollbar calls 
	when adding a new page to minimize flicker

	* lib/system-gschemrc.in: Commented in Carlos' new file-new hook
	and change some of the defaults a little.  No matter what default
	I pick will probably be wrong for somebody (sorry).

	* src/x_print.c: Applied patch by Peter Brett (Patch#1567622):
	Make print settings sticky for session.  Thanks!

2006-09-30 Carlos Nieves Onega <cnieves@iespana.es>

	* include/prototype.h, lib/system-gschemrc.in, src/g_hook.c, 
	  src/g_register.c, src/gschem.c, src/x_window.c:
	  Added a new scheme function to get the objects in a page.
	  Improved the new-page-hook in system-gschemrc so it only adds
	  the titleblock if the page has no objects.

2006-09-28 Carlos Nieves Onega <cnieves@iespana.es>

	* include/globals.h, include/prototype.h, lib/system-gschemrc.in,
	  src/g_hook.c, src/g_register.c, src/globals.c, src/gschem.c,
	  src/i_callbacks.c, src/x_window.c: